# Harshc

./: README.md  README.mdxm-b  build-apk.sh  buildozer.spec  client.py  index.html  main.py  pyproject.toml  rangoli.py  server.py
.github/: FUNDING.yml
.github/workflows/: build.yml
src/clientapp/: __main__.py  app.py
